# medigraph

./: .env.example  .gitignore  Dockerfile  PRE REQ.txt  README.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  main.py
app/ai/: __init__.py  ambulance_demand_predictor.py  anomaly_detector.py  attendance_predictor.py  base_predictor.py  disease_trend_analyzer.py  equipment_predictor.py  inventory_forecaster.py  patient_footfall_forecaster.py  recommendation_engine.py
app/api/: __init__.py  ambulances.py  attendance.py  dashboard.py  diagnostics.py  health.py  hmi.py  hospitals.py  inventory.py  notifications.py  patients.py  recommendations.py  reports.py  voice.py  workflow.py
app/auth/: __init__.py  clerk_auth.py  dependencies.py
app/config/: __init__.py  settings.py
app/database/: __init__.py  connection.py  init_db.py
app/middleware/: __init__.py  audit_middleware.py  error_handler.py  logging_middleware.py
app/models/: __init__.py
app/notifications/: brevo_client.py  notification_manager.py
app/repositories/: __init__.py  ambulance_repository.py  attendance_repository.py  base_repository.py  diagnostics_repository.py  district_repository.py  hmi_repository.py  hospital_repository.py  inventory_repository.py  notification_repository.py  patient_repository.py  recommendation_repository.py  report_repository.py
app/schemas/: __init__.py
app/services/: __init__.py  ambulance_service.py  attendance_service.py  diagnostics_service.py  hmi_service.py  hospital_service.py  inventory_service.py  report_service.py  (+5 more)
tests/: conftest.py
(+11 files in other folders)
